--- a/web/css/styles_GIS.css
+++ b/web/css/styles_GIS.css
@@ -447,5 +447,60 @@ div.pagination span.disabled {
 	color: #DDD;
 }
 
+#routes-priority {
+	padding: 0;
+  	margin: 0 0.8rem;
+}
 
+#routes-priority li {
+  background-color: rgb(248, 159, 159);
+  margin-top: 1rem;
+  width: 95%;
+  padding: 0.5rem;
+  border-radius: 10px;
+  line-height: 1.8;
+  font-size: 1.1em;
+  font-weight: 700;
+  color: rgb(27, 27, 27);
 
+}
+
+#routes-priority li:hover {
+  background-color: rgb(0, 4, 26);
+  transition: 0.1s linear;
+  margin: 0.5rem 0;
+  color: rgb(245, 145, 145);
+
+  cursor: pointer;
+}
+
+#routes-w {
+	padding: 0;
+  	margin: 0 0.8rem;
+}
+
+#routes-w li {
+  background-color: rgb(214, 214, 214);
+  margin-top: 1rem;
+  width: 95%;
+  padding: 0.5rem;
+  border-radius: 10px;
+  line-height: 1.8;
+  font-size: 1.1em;
+  font-weight: 700;
+  color: rgb(27, 27, 27);
+
+}
+
+#routes-w li:hover {
+  background-color: rgb(0, 4, 26);
+  transition: 0.1s linear;
+  margin: 0.5rem 0;
+  color: honeydew;
+
+  cursor: pointer;
+}
+
+li {
+    white-space: pre;
+}
