--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -15,14 +15,15 @@ form li {
 
 input[type="text"], input[type="password"] {
 	
-    width: %;
+    width: 70%;
     padding: 10px;
     color: #ABABAB;
     font-size: 16px;
     outline: none;
     background: none;
     border: none;
-	}
+}
+
 form li:hover{
 	border:1px solid #40A9DF;
 	 box-shadow: 0 0 1em #40A9DF;
@@ -74,5 +75,5 @@ box-shadow:0px 1px 6px #666666;border-radius: 5px;
 -moz-border-radius: 5px; 
 -webkit-border-radius: 5px;  
 background-position:bottom ;
-background-repeat:no-repeat ;">
+background-repeat:no-repeat ;
 }
